--- a/app/views/latest/informant-triage/04-who-else.html
+++ b/app/views/latest/informant-triage/04-who-else.html
@@ -31,7 +31,7 @@
 {% from "govuk/components/radios/macro.njk" import govukRadios %}
 
 {{ govukRadios({
-  name: "whereDoYouLive",
+  name: "whoElseDetails",
   fieldset: {
     legend: {
       text: "Who else's details will be recorded?",
@@ -45,12 +45,14 @@
 
   items: [
     {
-      value: "1",
-      text: "Father"
+      value: "whoElseFather",
+      text: "Father",
+      checked: data['whoElseDetails'] == "Father"
     },
     {
-      value: "2",
-      text: "Second female parent"
+      value: "whoElseSecondParent",
+      text: "Second parent",
+      checked: data['whoElseDetails'] == "Second parent"
     }
   ]
 }) }}
