coroner main flow-needs tidy

--- a/app/views/00a-check-your-email.html
+++ b/app/views/00a-check-your-email.html
@@ -52,7 +52,7 @@
 
       {{ govukButton({
         text: "Sign in",
-        href: "latest/00-life-event-home"
+        href: "01-life-event-home"
       }) }}
 
     </div>
