--- a/app/views/index.html
+++ b/app/views/index.html
@@ -1,92 +1,98 @@
-{% extends "layouts/main.html" %}
+ {% extends "layouts/main.html" %}
 
-{% block pageTitle %}
-  Question page template – {{ serviceName }} – GOV.UK Prototype Kit
-{% endblock %}
-
-{% block beforeContent %}
-{% from "govuk/components/phase-banner/macro.njk" import govukPhaseBanner %}
-
-{{ govukPhaseBanner({
-  tag: {
-    text: "Prototype"
-  },
-  html: 'This is a prototype, not the real service.'
-}) }}
-
-
-{% endblock %}
-
+{% set pageName="Home" %}
 
 {% block content %}
 
-  <!-- <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-two-thirds">
 
-      <h1 class="govuk-heading-l">
-        Sign in
-      </h1>
 
-      <form class="form" action="/path/of/next/page" method="post">
+    <h1 class="govuk-heading-xl">
+      Prototypes
+    </h1>
 
-        <p>
-          [Insert question content here - see the
-          <a href="https://design-system.service.gov.uk">GOV.UK Design System</a>
-          for examples]
-        </p>
+     <!-- Informant -->
+     <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
 
-        {{ govukButton({
-          text: "Continue"
-        }) }}
+     <h2 class="govuk-heading-l govuk-!-margin-bottom-2">Still birth - Coroner + informant</h2>
+     
+     <p class="govuk-body">
+       Coroner with informant registration
+     </p>
+     
+     <h3 class="govuk-heading-s govuk-!-margin-bottom-2">Round 2: <strong class="govuk-tag govuk-tag--blue govuk-!-margin-bottom-2">
+       Tested
+     </strong></h3>
+ 
+     <p class="govuk-body">
+       <a href="00-sign-in.html">From sign in page</a> 
+     </p>
+     <p class="govuk-body">
+      <a href="02-life-event-home.html">Life event home page</a> 
+    </p>
+      <p class="govuk-body">
+      <a href="latest/03-tasklist.html">Tasklist page - short</a> 
+    </p>
+ 
+     <p class="govuk-body-s govuk-!-margin-top-6">Got a question? Team 3: Millie, Nici or Vika</p>
 
-      </form>
+   
 
-    </div>
-  </div> -->
+  
 
- <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
+     <!-- Informant -->
+     <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
 
-      <h1 class="govuk-heading-l">
-        Sign in
-      </h1>
+     <h2 class="govuk-heading-l govuk-!-margin-bottom-2">Still birth - Informant</h2>
+     
+     <p class="govuk-body">
+       Informant led registration
+     </p>
+     
+     <h3 class="govuk-heading-s govuk-!-margin-bottom-2">Round 1: <strong class="govuk-tag govuk-tag--blue govuk-!-margin-bottom-2">
+       Tested
+     </strong></h3>
+ 
+    <p class="govuk-body">
+       <a href="00-sign-in.html">From sign in page</a> 
+     </p>
+     <p class="govuk-body">
+      <a href="02-life-event-home.html">Life event home page</a> 
+    </p>
+      <p class="govuk-body">
+      <a href="latest/03-tasklist.html">Tasklist page - short</a> 
+    </p>
+     
+ 
+     <p class="govuk-body-s govuk-!-margin-top-6">Got a question? Team 3: Millie, Nici or Vika</p>
 
-      <div class="govuk-form-group">
-        <label class="govuk-label govuk-label--s" for="email">
-            Email address
-        </label>
-        <div id="event-name-hint" class="govuk-hint">
-        This is your work email address
-        </div>
-        <input class="govuk-input govuk-!-width-one-half" id="email" name="email" type="text" autocomplete="email">
-      </div>
+   
 
-      <div class="govuk-form-group">
-        <label class="govuk-label govuk-label--s" for="password">
-        Password
-        </label>
-        <input class="govuk-input govuk-!-width-one-half" id="password" name="password" type="text" autocomplete="password">
-      </div>    
+    <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
 
-      <details class="govuk-details">
-        <summary class="govuk-details__summary">
-          <span class="govuk-details__summary-text">
-            I’ve forgotten my password
-          </span>
-        </summary>
-        <div class="govuk-details__text">
-          Email helpdeskemail@email.com to reset your password.
-        </div>
-      </details>
+    <!-- Another prototype-->
 
-      {% from "govuk/components/button/macro.njk" import govukButton %}
+    <h2 class="govuk-heading-l govuk-!-margin-bottom-2">Template: Work name</h2>
+    <strong class="govuk-tag govuk-!-margin-bottom-4">
+      Status
+    </strong>
 
-      {{ govukButton({
-        text: "Continue",
-        href: "check-your-email"
-      }) }}
+    <p class="govuk-body">
+      <a href="#">Link</a>
+    </p>
 
-    </div>
+    <p class="govuk-body">
+      Short description.
+    </p>
+
+    <p class="govuk-body-s">Got a question? Team x: Interaction Designer, Content Designer, Researcher</p>
+
+
+    <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
+
+
   </div>
+</div>
 
 {% endblock %}
