--- a/app/views/index.html
+++ b/app/views/index.html
@@ -32,7 +32,7 @@
       <a href="02-life-event-home.html">Life event home page</a> 
     </p>
       <p class="govuk-body">
-      <a href="latest/03-tasklist.html">Tasklist page - short</a> 
+      <a href="coroner-inquest/task-list.html">Tasklist page</a> 
     </p>
  
      <p class="govuk-body-s govuk-!-margin-top-6">Got a question? Team 3: Millie, Nici or Vika</p>
@@ -61,7 +61,7 @@
       <a href="02-life-event-home.html">Life event home page</a> 
     </p>
       <p class="govuk-body">
-      <a href="latest/03-tasklist.html">Tasklist page - short</a> 
+      <a href="latest/task-list.html">Tasklist page</a> 
     </p>
      
  
