index and coroner after nim and em catch up

--- a/app/views/coroner-inquest/cause-of-death/cause-of-death.html
+++ b/app/views/coroner-inquest/cause-of-death/cause-of-death.html
@@ -258,7 +258,7 @@ href: "javascript:window.history.back()"
 
 
 
-      <div class="govuk-form-group" id="cert-pract">
+      <!-- <div class="govuk-form-group" id="cert-pract">
         <fieldset class="govuk-fieldset" id="" aria-required="false">
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
             Pathologist details
@@ -280,7 +280,7 @@ href: "javascript:window.history.back()"
 
 
         </fieldset>
-      </div>
+      </div> -->
 
 
       <div class="govuk-button-group">
