--- a/app/views/index.html
+++ b/app/views/index.html
@@ -11,31 +11,37 @@
     <h1 class="govuk-heading-xl">
       Prototypes
     </h1>
-
-     <!-- Informant -->
+ <p class="govuk-body-s govuk-!-margin-top-6">Got a question? Team 3: Millie, Nici or Vika</p>
+     <!-- Inquest -->
      <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
 
-     <h2 class="govuk-heading-l govuk-!-margin-bottom-2">Still birth - Coroner + informant</h2>
+     <h2 class="govuk-heading-l govuk-!-margin-bottom-2">Still birth </h2>
      
      <p class="govuk-body">
-       Coroner with informant registration
+       This prototype has 3 scenarios - these depend on what user selects on the 'Source of medical information' radio buttons. 
+       
+       <ul class="govuk-list govuk-list--bullet">
+        <li>Coroner with informant registration</li>
+        <li>Coroner inquest - 99revA (this journey doesn't have an informant)</li>
+       </ul>
      </p>
      
-     <h3 class="govuk-heading-s govuk-!-margin-bottom-2">Round 2: <strong class="govuk-tag govuk-tag--blue govuk-!-margin-bottom-2">
-       Tested
+     <h3 class="govuk-heading-s govuk-!-margin-bottom-2">Round 2: <strong class="govuk-tag govuk-tag--grey govuk-!-margin-bottom-2">
+       Not yet tested
      </strong></h3>
  
      <p class="govuk-body">
        <a href="00-sign-in.html">From sign in page</a> 
      </p>
-     <p class="govuk-body">
-      <a href="01-life-event-home.html">Life event home page</a> 
-    </p>
+   
       <p class="govuk-body">
-      <a href="coroner-inquest/task-list.html">Tasklist page</a> 
+      <a href="coroner-inquest/task-list.html">Inquest task list</a> 
+    </p>
+     <p class="govuk-body">
+      <a href="latest/task-list.html">Informant-led task list</a> 
     </p>
  
-     <p class="govuk-body-s govuk-!-margin-top-6">Got a question? Team 3: Millie, Nici or Vika</p>
+    
 
    
 
@@ -47,29 +53,25 @@
      <h2 class="govuk-heading-l govuk-!-margin-bottom-2">Still birth - Informant</h2>
      
      <p class="govuk-body">
-       Informant led registration
+       Exploratory research with registrars and first draft of Figma prototype
      </p>
      
      <h3 class="govuk-heading-s govuk-!-margin-bottom-2">Round 1: <strong class="govuk-tag govuk-tag--blue govuk-!-margin-bottom-2">
-       Tested
+       Figma tested
      </strong></h3>
  
     <p class="govuk-body">
-       <a href="00-sign-in.html">From sign in page</a> 
+       Ask UCD for access to Figma file to view iteration shown to participants
      </p>
-     <p class="govuk-body">
-      <a href="01-life-event-home.html">Life event home page</a> 
-    </p>
-      <p class="govuk-body">
-      <a href="latest/task-list.html">Tasklist page</a> 
-    </p>
+    
      
  
-     <p class="govuk-body-s govuk-!-margin-top-6">Got a question? Team 3: Millie, Nici or Vika</p>
+
 
    
 
     <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
+     <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
 
     <!-- Another prototype-->
 
