--- a/app/views/latest/informant/cause-of-death/cause-of-death.html
+++ b/app/views/latest/informant/cause-of-death/cause-of-death.html
@@ -30,7 +30,7 @@ Cause of death – {{ serviceName }} – GOV.UK Prototype Kit
             Cause of death 
           </h1>
 
-          <form class="form" action="cause-of-death-form" method="post">
+          <form class="form" action="/latest/informant/cause-of-death-form" method="post">
 
             <h2 class="govuk-heading-m">About the death</h2>
 
