--- a/app/views/latest/informant/submit/check-answers-page.html
+++ b/app/views/latest/informant/submit/check-answers-page.html
@@ -298,7 +298,7 @@
   </div>
 
   <div class="govuk-grid-row govuk-grid-column-full">
-    {% from "govuk/components/checkboxes/macro.njk" import govukCheckboxes %}
+     {% from "govuk/components/checkboxes/macro.njk" import govukCheckboxes %}
 
 {{ govukCheckboxes({
   name: "waste",
@@ -313,38 +313,18 @@
   items: [
     {
       value: "farm",
-      text: "Informant has confirmed that the particulars given by them are true to the best of their knowledge and belief."
+      text: "Confirm register entry"
     }
   ]
 }) }}
   </div>
 
-    <div class="govuk-grid-row govuk-grid-column-full">
-    {% from "govuk/components/checkboxes/macro.njk" import govukCheckboxes %}
+   
 
-{{ govukCheckboxes({
-  name: "waste",
-  fieldset: {
-    legend: {
-      text: " ",
-      isPageHeading: false,
-      classes: "govuk-body"
-    }
-  },
-
-  items: [
-    {
-      value: "farm",
-      text: "Registrar is satisfied that all specified requirements have been met."
-    }
-  ]
-}) }}
-  </div>
-
-      <form action="confirmation-page" method="post" novalidate>
+      <form action="sign-page" method="post" novalidate>
 
         {{ govukButton({
-          text: "Complete registration"
+          text: "Continue"
         }) }}
 
       </form>
