--- a/app/views/latest/informant/submit/confirmation-page.html
+++ b/app/views/latest/informant/submit/confirmation-page.html
@@ -31,7 +31,7 @@
       </p>
 
       <p  class="govuk-body">
-        <a href="../../latest/life-event-home.html">
+        <a href="../../../01-life-event-home.html">
           Go back to life events home
         </a>
       </p>
