--- a/app/views/index.html
+++ b/app/views/index.html
@@ -9,16 +9,16 @@
 
 
     <h1 class="govuk-heading-xl">
-      Prototypes
+      Prototypes for stillbirth
     </h1>
  <p class="govuk-body-s govuk-!-margin-top-6">Got a question? Team 3: Millie, Nici or Vika</p>
      <!-- Inquest -->
      <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
 
-     <h2 class="govuk-heading-l govuk-!-margin-bottom-2">Still birth </h2>
+     <h2 class="govuk-heading-l govuk-!-margin-bottom-2">CN2 &amp; 99revA</h2>
      
      <p class="govuk-body">
-       This prototype has 3 scenarios - these depend on what user selects on the 'Source of medical information' radio buttons. 
+       This prototype has 2 scenarios - these depend on what user selects on the 'Source of medical information' radio buttons. 
        
        <ul class="govuk-list govuk-list--bullet">
         <li>Coroner with informant registration</li>
@@ -50,14 +50,14 @@
      <!-- Informant -->
      <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
 
-     <h2 class="govuk-heading-l govuk-!-margin-bottom-2">Still birth - Informant</h2>
+     <h2 class="govuk-heading-l govuk-!-margin-bottom-2">Informan led (Figma)</h2>
      
      <p class="govuk-body">
        Exploratory research with registrars and first draft of Figma prototype
      </p>
      
      <h3 class="govuk-heading-s govuk-!-margin-bottom-2">Round 1: <strong class="govuk-tag govuk-tag--blue govuk-!-margin-bottom-2">
-       Figma tested
+       Tested
      </strong></h3>
  
     <p class="govuk-body">
