--- a/app/views/latest/informant/task-list.html
+++ b/app/views/latest/informant/task-list.html
@@ -62,6 +62,44 @@ Task list template – {{ serviceName }} – GOV.UK Prototype Kit
 
     <h2 class="govuk-heading-m govuk-!-margin-top-5 govuk-!-margin-bottom-1">Information from medical certificate</h2>
     <p class="govuk-hint">Medical certificate of stillbirth (form 34)</p>
+
+
+<ul class="govuk-task-list">
+  <li class="govuk-task-list__item">
+    <div class="govuk-task-list__name-and-hint">
+      {% if userMedicalInfoSource == "2" and userPostMortemDetail == "2-with-inf" %}
+        Coroner's post mortem (CN2), with informant
+     
+      {% elif userMedicalInfoSource == "1-informant" %}
+        Medical certificate of stillbirth (form 34)
+    
+      {% elif userMedicalInfoSource == "4-informant" %}
+        No medical professional involved (form 35)
+      {% else %}
+        Unknown source
+
+<p>Source: {{ userMedicalInfoSource }}</p>
+<p>Detail: {{ userPostMortemDetail }}</p>
+
+      {% endif %}
+    </div>
+    <div class="govuk-task-list__status">
+      Completed
+    </div>
+  </li>
+</ul>
+
+
+
+
+
+
+
+
+
+
+
+
     <ul class="govuk-task-list">
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
