no informant routing

--- a/app/views/latest/no-informant/cause-of-death/medical-info-check.html
+++ b/app/views/latest/no-informant/cause-of-death/medical-info-check.html
@@ -165,7 +165,7 @@
         </dl>
      
 
-      <form action="medical-info-check-form" method="post" novalidate>
+      <form action="/latest/no-informant/medical-info-check-form" method="post" novalidate>
 
         {{ govukButton({
           text: "Save and return"
