--- a/app/views/latest/no-informant/cause-of-death/cause-of-death.html
+++ b/app/views/latest/no-informant/cause-of-death/cause-of-death.html
@@ -32,7 +32,7 @@ href: "javascript:window.history.back()"
       Cause of death
     </h1>
 
-    <form class="form" action="cause-of-death-form" method="post">
+    <form class="form" action="/latest/no-informant/cause-of-death-form" method="post">
 
       <h2 class="govuk-heading-m">About the inquest</h2>
 
