--- a/app/views/latest/no-informant/cause-of-death/coroner-details.html
+++ b/app/views/latest/no-informant/cause-of-death/coroner-details.html
@@ -22,7 +22,7 @@ href: "javascript:window.history.back()"
 
 
 
-    <form class="form" action="coroner-details-form" method="post">
+    <form class="form" action="/latest/no-informant/coroner-details-form" method="post">
 
      
 
