--- a/app/views/latest/no-informant/child-details/name-date.html
+++ b/app/views/latest/no-informant/child-details/name-date.html
@@ -28,7 +28,7 @@ href: "javascript:window.history.back()"
           Name, sex and date of stillbirth
         </h1>
 
-        <form class="form" action="name-date-form" method="post">
+        <form class="form" action="/latest/no-informant/name-date-form" method="post">
 
           <div class="govuk-form-group">
             <fieldset class="govuk-fieldset" id="nameOrNot">
