--- a/app/views/latest/no-informant/child-details/parents-details.html
+++ b/app/views/latest/no-informant/child-details/parents-details.html
@@ -28,7 +28,7 @@ href: "javascript:window.history.back()"
       Parents' details
     </h1>
 
-    <form class="form" action="parents-details-form" method="post">
+    <form class="form" action="/latest/no-informant/parents-details-form" method="post">
 
 
  <div class="govuk-form-group">
